2.2th fixed card position due to row align items center

--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,7 @@ body {
     "slnt" 0;
 }
 
+
 /* .container {
   width: 80%;
   max-width: 1176px;
@@ -32,7 +33,6 @@ body {
 .row {
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-evenly;
-  align-items: center;
+  justify-content: center;
   margin: 0 -1rem;
 }
